--- a/reports/paper/main.tex
+++ b/reports/paper/main.tex
@@ -27,17 +27,13 @@
 
 \section*{Results}
 
-\subsubsection*{Epidemiological parameters}
-
-Not sure about this section. But maybe it make sense for completeness to include, briefly, the values of estimate R0, migration and sampling rates.
-
 \subsubsection*{Total case counts}
 
 Figures \ref{fig:gribbon} and \ref{fig:trajs}.\\
 
 Inferred population trajectories that account for all cases in the country. It is not an independent estimate since we are using informative priors for the sampling rates (upperbound computed as sequences/reported cases) and the subsampling scheme also includes the number of cases in the country (but that is a weaker link I think.\\
 
-Comparison with ECDC case counts: delay in notifications and underreporting, for some of the  countries at the end of the peioord the reported cases are very closed to the trajectories, e.g. Italy, Germany. Hubei-China huge difference in tendency and absolute numbers.\\ \todo{Working on these with new analyses}
+Comparison with ECDC case counts: delay in notifications and underreporting, for some of the  countries at the end of the periord the reported cases are very closed to the trajectories, e.g. Italy, Germany. Hubei-China huge difference in tendency and absolute numbers.\\ \todo{Working on these with new analyses}
 
 Measure the (mean?) difference between inferred and reported case counts and compare among countries. By day or in general? Absolute or relative to the number of cases that day?
 
@@ -47,6 +43,8 @@ Figures \ref{fig:first}, \ref{fig:first_src} and \ref{fig:first_dest}.\\
 We want to answer the question of when and where the first case in Europe occured. No clear, Germany? Figure \ref{fig:first} A. We can measure the time between first case and first reported case and compare between countries. \\
 \todo{ticks for every month}
 And for each country where this first case came from, more support for Hubei introduction in all countries Figure \ref{fig:first} B.\\
+
+Measure expected day of introduction.
 
 In Figure \ref{fig:first_src}, we are looking at the ordered set of introduction intoo european countries. For each trajectory, we have the fist introduction into each country happening in a determined order, i.e. the first european country with a covid case, the second country with a covid case... So we are vissualizing the number of trajectories that share the same order of first cases. More trajectories where the first case was to Germany, no clear order after the first country. Spain last one.\\
 \todo{Explain this better}
@@ -81,6 +79,10 @@ Hubei-China is the majority source of migrations for all countries till February
 
 \subsubsection*{GLM predictors}
 Which channels were the main sources of transmission across national borders.
+
+\subsubsection*{Epidemiological parameters}
+
+Not sure about this section. But maybe it make sense for completeness to include, briefly, the values of estimate R0, migration and sampling rates.
 
 
 \section*{Discussion}
