--- a/reports/paper/main.tex
+++ b/reports/paper/main.tex
@@ -14,40 +14,52 @@
 
 \usepackage{todonotes}
 
+\usepackage{pgfplotstable}
+\pgfplotsset{compat=1.16}
+\def\getcell#1#2#3{
+\pgfplotstablegetelem{#1}{[index]#2}\of{#3}\pgfplotsretval%
+}
+
+% Tables 
+\pgfplotstableset{col sep=tab, header=has colnames, string type, text special chars={\%}} 
+\pgfplotstableread{../../results/201030_europe3_table01.tsv}{\casestable}
+\pgfplotstableread{../../results/201030_europe3_table02.tsv}{\firsttable}
+
+
 \title{A comprehensive study of the early phylodynamics of SARS-CoV-2 in Europe}
+
 
 \begin{document}
 \maketitle
 
-\abstract{This project focus on the spatial dynamics of the early spread of SARS-CoV-2 in Europe. We apply a novel approach based on the Multi-type Birth Death phylodynamic model to infer structured population dynamics jointly with between-subpopulation transmission rates from viral genome sequences. The inferred epidemic trajectories for the combined outbreak responsible for the observed sequence data will allow us to better understand the entry into and early spread of SARS-CoV-2 in Europe.}
+\abstract{This project focus on the spatial dynamics of the early spread of SARS-CoV-2 in Europe. We apply a novel approach based on the Multi-type Birth Death phylodynamic model to infer structured population dynamics jointly with between-subpopulation transmission rates from viral genome sequences. The inferred epidemic trajectories for the combined outbreak responsible for the observed sequence data will allow us to better understand the entry into and early spread of SARS-CoV-2 in Europe.
+
+The early dynamics of the epidemic in Europe surprised the whole world/ From isolated cases detexcted in some, ina  few weeks we faced an unprecedent epidemic with case numbers and death counts stressing well stalished health infraestructures. Understanding what happened during those first month could prepare us to be less surpred in similar future events. Complex dynamics, typical epi date, case identification and travel history, very likely not all cases reported. Genetic sequences are a valuable source of information than together with popualtion dynamic model could inform us about the firrst steps of the coronavirus in Europe. We have integrated sequence data, flisht data and bayesian inference priors? to infer population trajectories - case counts and migration dynamics between the most relevant countrries at the start of the European pandemic.
+}
+
 
 \section*{Introduction}
 
-\section*{Methods}
+\item Importance of understanding the spread of the virus to prevent future outbreaks 
+
+\item About phylodynamics/phylogeographics? Use of genetic sequences as a source of information combined with other sources of information as travel data
+
+\item About what we know of the introduction of sars-cov-2 in Europe and early dynamics till 8 March
+
+\item About what we know of the case counts in Europe? Can sequences help?
+
+\item Introduce/formulate the questions: case counts, first introductions, ?migration vs within region transmission?, migration patterns, ?border closures.
+
 
 \section*{Results}
 
 \subsubsection*{Total case counts}
 
-Figures \ref{fig:gribbon} and \ref{fig:trajs}.\\
-
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\textwidth]{201014_europe2_figtraj01.png}
-    \caption{Inferred population size summary statistics for each deme over time. The line represents the median population trajectory and the interval is the interquartile range from a subsampled set of inferred population trajectories.}
-    \label{fig:gribbon}
-\end{figure}
+Figures \ref{fig:gribbon}, \ref{fig:trajs} and \ref{fig:reported}.\\
 
 
 Inferred population trajectories that account for all cases in the country. It is not an independent estimate since we are using informative priors for the sampling rates (upperbound computed as sequences/reported cases) and the subsampling scheme also includes the number of cases in the country (but that is a weaker link I think.\\
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.9\textwidth]{201014_europe2_figtraj02.png}
-    \caption{Inferred population size trajectories over time. A subsampled set of 200 inferred trajectories is plotted. In each subplot, the trajectories (solid lines) are compared with the ECDC total case count data (dashed line).}
-    \label{fig:trajs}
-\end{figure}
 
 Comparison with ECDC case counts: delay in notifications and underreporting, for some of the  countries at the end of the periord the reported cases are very closed to the trajectories, e.g. Italy, Germany. Hubei-China huge difference in tendency and absolute numbers.\\ \todo{Working on these with new analyses}
 
@@ -58,13 +70,6 @@ Measure the (mean?) difference between inferred and reported case counts and com
 Figures \ref{fig:first}, \ref{fig:first_src} and \ref{fig:first_dest}.\\
 
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{201014_europe2_figtraj03.png}
-    \caption{First introductions event time and source in each deme. \textbf{A} Probability density of the time of the first introduction for each deme from the subsampled set of trajectories. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of Hubei, the distribution of the time of the origin is plotted, since it was defined as the origin of the epidemic in the analysis with probability 1. For the other five demes, the distribution of the time of the first migration into the corresponding deme is plotted. \textbf{B} Probability density of the source of the first introduction event in each deme for the set of subsampled trajectories.}
-    \label{fig:first}
-\end{figure}
-
 We want to answer the question of when and where the first case in Europe occured. No clear, Germany? Figure \ref{fig:first} A. We can measure the time between first case and first reported case and compare between countries. \\
 \todo{ticks for every month}
 And for each country where this first case came from, more support for Hubei introduction in all countries Figure \ref{fig:first} B.\\
@@ -72,38 +77,20 @@ And for each country where this first case came from, more support for Hubei int
 Measure expected day of introduction.
 
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{201014_europe2_figtraj04.png}
-    \caption{Ordered set of countries by its first introduction, i.e. first case in the country. The color corresponds to the first country with a case, and the size of the box with the country name / ribbon / flux is the number / proportion of trajectories that have that particular order of first introductions.} 
-    \label{fig:first_dest}
-\end{figure}
 
 In Figure \ref{fig:first_src}, we are looking at the ordered set of introduction intoo european countries. For each trajectory, we have the fist introduction into each country happening in a determined order, i.e. the first european country with a covid case, the second country with a covid case... So we are vissualizing the number of trajectories that share the same order of first cases. More trajectories where the first case was to Germany, no clear order after the first country. Spain and Other European last one.\\
 \todo{Explain this better}
 
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{201014_europe2_figtraj05.png}
-    \caption{Ordered set of countries by its first migration, i.e. spreading event out of the country. The color corresponds to the last country with a migration to other countries. The size of the box with the country name / ribbon / flux is the number / proportion of trajectories that have that particular order of first migrations.}
-    \label{fig:first_src}
-\end{figure}
 
 
 In Figure \ref{fig:first_dest} we are looking at the ordered set of countries spreading covid. In the first position we have Hubei for all trajectories since it is the origin of the epidemic. In second position we will have the first European country from where a covid case was imported to other country. No clear dynamics except that moore support for Spain being the last country having a first exported covid case. Germany first one.\\  
+
 
 \subsubsection*{Migration vs within-region transmission}
 
 Figure \ref{fig:events}\\.
 
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{201014_europe2_figtraj06.png}
-    \caption{Mean inferred cumulative number of events (births and migrations) over time. A subsampled set of 200 inferred trajectories is plotted.}
-    \label{fig:events}
-\end{figure}
 
 This question is addresed on the original paper from Sarah.  Maybe could be interesting to look at this perspective since it is important for border closure measures.
 
@@ -121,35 +108,6 @@ This question is addresed on the original paper from Sarah.  Maybe could be inte
 Figures \ref{fig:migs_srcdest} and \ref{fig:migs}.\\
 
 
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{201014_europe2_figtraj07.png}
-    \caption{}
-    \label{fig:migs_srcdest}
-\end{figure}
-
-
-\begin{figure}[!tbp]
-  \centering
-
-  \begin{minipage}[t]{0.4\textwidth}
-  \includegraphics[width=\textwidth]{201014_europe2_figtraj08a.png}
-  \label{fig:migs1}
-  \end{minipage}
-  \begin{minipage}[t]{0.4\textwidth}
-  \includegraphics[width=\textwidth]{201014_europe2_figtraj08b.png}
-  \label{fig:migs2}
-  \end{minipage}
-  \begin{minipage}[t]{0.4\textwidth}
-  \includegraphics[width=\textwidth]{201014_europe2_figtraj08c.png}
-  \label{fig:migs3}
-  \end{minipage}
-  \caption{Migration flux among demes over the three periods defined in the analysis.}
-  \label{fig:migs}
-\end{figure}
-
-
 Similar information in both plots, but in the chord plots instead of a dayly evolution the time period is split on three (as in the GLM analysis). Chord plots are nicer and easier to understand I think, but barplots shows the great detail of the results of the model. Another advantage of the chrod plot is that the ir shows mean absolute values and not only relative values.\\
 
 Hubei-China is the majority source of migrations for all countries till February and then some patterns emerge (we expect more interesting results with the added info in GLM analysis).\\
@@ -165,11 +123,118 @@ Which channels were the main sources of transmission across national borders.
 Not sure about this section. But maybe it make sense for completeness to include, briefly, the values of estimate R0, migration and sampling rates.
 
 
+% Figures 
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=0.8\textwidth]{201030_europe3_figtraj01.png}
+    \caption{Inferred population size summary statistics for each deme over time. The line represents the median population trajectory and the interval is the 95\% center credible interval from a subsampled set of inferred population trajectories.}{}
+    \label{fig:gribbon}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=0.9\textwidth]{201030_europe3_figtraj02.png}
+    \caption{Inferred population size trajectories over time. A subsampled set of 200 inferred trajectories is plotted. In each subplot, the trajectories (solid lines) are compared with the ECDC total case count data (dashed line).}
+    \label{fig:trajs}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=0.9\textwidth]{201030_europe3_figtraj03.png}
+    \caption{}
+    \label{fig:reported}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=\textwidth]{201030_europe3_figtraj04.png}
+    \caption{First introductions event time and source in each deme. \textbf{A} Probability density of the time of the first introduction for each deme from the subsampled set of trajectories. Each dotted line represents the first date when cases where reported to ECDC by deme color. In the case of Hubei, the distribution of the time of the origin is plotted, since it was defined as the origin of the epidemic in the analysis with probability 1. For the other five demes, the distribution of the time of the first migration into the corresponding deme is plotted. \textbf{B} Probability density of the source of the first introduction event in each deme for the set of subsampled trajectories.}
+    \label{fig:first}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=\textwidth]{201030_europe3_figtraj06.png}
+    \caption{Ordered set of countries by its first migration, i.e. spreading event out of the country. The color corresponds to the last country with a migration to other countries. The size of the box with the country name / ribbon / flux is the number / proportion of trajectories that have that particular order of first migrations.}
+    \label{fig:first_src}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=\textwidth]{201030_europe3_figtraj05.png}
+    \caption{Ordered set of countries by its first introduction, i.e. first case in the country. The color corresponds to the first country with a case, and the size of the box with the country name / ribbon / flux is the number / proportion of trajectories that have that particular order of first introductions.} 
+    \label{fig:first_dest}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=\textwidth]{201030_europe3_figtraj08.png}
+    \caption{}
+    \label{fig:migs_srcdest}
+\end{figure}
+
+
+\begin{figure}[]
+    \centering
+    \includegraphics[width=\textwidth]{201030_europe3_figtraj07.png}
+    \caption{Mean inferred cumulative number of events (births and migrations) over time. A subsampled set of 200 inferred trajectories is plotted.}
+    \label{fig:events}
+\end{figure}
+
+
+\begin{figure}[!tbp]
+  \centering
+
+  \begin{minipage}[t]{0.4\textwidth}
+  \includegraphics[width=\textwidth]{201030_europe3_figtraj09a.png}
+  \label{fig:migs1}
+  \end{minipage}
+  \begin{minipage}[t]{0.4\textwidth}
+  \includegraphics[width=\textwidth]{201030_europe3_figtraj09b.png}
+  \label{fig:migs2}
+  \end{minipage}
+  \begin{minipage}[t]{0.4\textwidth}
+  \includegraphics[width=\textwidth]{201030_europe3_figtraj09c.png}
+  \label{fig:migs3}
+  \end{minipage}
+  \caption{Migration flux among demes over the three periods defined in the analysis.}
+  \label{fig:migs}
+\end{figure}
 
 
 \section*{Discussion}
 
+\item Case counts discussion and reporting rates, second wave in Europe. Other estimations in other studies.
+
+\item First introduction other studies. 
+
+\item Migration patterns other studies.
+
+\item Discuss assumptions of the model, caveats and possible improvements.
+
+
 \section*{Conclusion}
 
+
+\section*{Material and Methods}
+
+\item Dataset and subsampling. Alignment. 
+
+\item Model BDMM-Prime, stochastic mapping. Priors. Bayesian phylogeographic inference. Phylodynamics.
+
+\item GLM model. External data.
+
+\item ?Same analysis but with travel data from last year, can we observe a consequence of Hubei lockdown and reduced travel?
+
+\item Trajectories analysis. Subsampling and summarizing (median, 95\% interval)
+
+\item Snakemake workflow.
 
 \end{document}
